@@ -42,18 +42,16 @@ def generate(env):
     """Add Builders and construction variables for ar to an Environment."""
     SCons.Tool.createStaticLibBuilder(env)
 
-    arcom = '$AR $ARFLAGS $TARGET $SOURCES'
-    ranlib = 'ranlib'
-    if env.Detect(ranlib):
-        arcom = arcom + '\n$RANLIB $RANLIBFLAGS $TARGET'
-
     env['AR']          = 'ar'
-    env['ARFLAGS']     = SCons.Util.CLVar('r')
-    env['RANLIB']      = ranlib
-    env['RANLIBFLAGS'] = SCons.Util.CLVar('')
-    env['ARCOM']       = arcom
+    env['ARFLAGS']     = SCons.Util.CLVar('rc')
+    env['ARCOM']       = '$AR $ARFLAGS $TARGET $SOURCES'
     env['LIBPREFIX']   = 'lib'
     env['LIBSUFFIX']   = '.a'
+
+    if env.Detect('ranlib'):
+        env['RANLIB']      = 'ranlib'
+        env['RANLIBFLAGS'] = SCons.Util.CLVar('')
+        env['RANLIBCOM']   = '$RANLIB $RANLIBFLAGS $TARGET'
 
 def exists(env):
     return env.Detect('ar')
